// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`namespace should create a namespace and its declaration 1`] = `
"// Generated by @monstermann/barrels
/* eslint-disable */
/* prettier-ignore */
// dprint-ignore-file
// biome-ignore lint: disable

import { area } from "./area.js";
import { create } from "./create.js";
import { defaultUnit } from "./reexports.js";
import { ParsedPath } from "node:path";
import { Unit } from "./reexports.js";
import { Units } from "./reexports.js";
import { View } from "./View.jsx";
import { zero } from "./create.js";

interface Shape {
    height: number
    unit?: Unit
    width: number
}

type ShapeOptions = Shape & { path?: ParsedPath }

declare namespace Shape {
    export {
        area,
        create,
        defaultUnit,
        Units,
        View,
        zero,
    }
}

export {
    Shape,
    ShapeOptions,
    Unit,
}
"
`;

exports[`namespace should create a namespace and its declaration 2`] = `
"// Generated by @monstermann/barrels
/* eslint-disable */
/* prettier-ignore */
// dprint-ignore-file
// biome-ignore lint: disable

import { area } from "./area.js";
import { create } from "./create.js";
import { defaultUnit } from "./reexports.js";
import { Units } from "./reexports.js";
import { View } from "./View.jsx";
import { zero } from "./create.js";

export const Shape = {
    area,
    create,
    defaultUnit,
    Units,
    View,
    zero,
}
"
`;

exports[`flat should export all files 1`] = `
"// Generated by @monstermann/barrels
/* eslint-disable */
/* prettier-ignore */
// dprint-ignore-file
// biome-ignore lint: disable

export * from "./a";
export * from "./b";
"
`;

exports[`flat should include nested files and skip non-modules 1`] = `
"// Generated by @monstermann/barrels
/* eslint-disable */
/* prettier-ignore */
// dprint-ignore-file
// biome-ignore lint: disable

export * from "./a";
export * from "./b";
export * from "./nested/c";
"
`;
